gccida/g1/compute_transp
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4218:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v15; // rax 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4218:12: error: use of undeclared identifier 'v15'
reg_set_0 *v15; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4226:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v23; // rdx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4226:12: error: use of undeclared identifier 'v23'
reg_set_0 *v23; // rdx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4229:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4229:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4269:1: error: use of undeclared identifier 'v15'
v15 = reg_set_table[rtuint]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4270:6: error: use of undeclared identifier 'v15'
if ( v15 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4275:35: error: use of undeclared identifier 'v15'
v17 = bmap[*( int *)( v16->data.l[v15->insn->fld[0].rtint] + 88)]; 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4277:1: error: use of undeclared identifier 'v15'
v15 = v15->next; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4277:7: error: use of undeclared identifier 'v15'
v15 = v15->next; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4279:9: error: use of undeclared identifier 'v15'
while ( v15 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4305:1: error: use of undeclared identifier 'v23'
v23 = reg_set_table[v18]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4306:6: error: use of undeclared identifier 'v23'
if ( v23 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4311:35: error: use of undeclared identifier 'v23'
v25 = bmap[*( int *)( v24->data.l[v23->insn->fld[0].rtint] + 88)]; 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4313:1: error: use of undeclared identifier 'v23'
v23 = v23->next; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4313:7: error: use of undeclared identifier 'v23'
v23 = v23->next; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4315:9: error: use of undeclared identifier 'v23'
while ( v23 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/gcse.c:4343:1: error: use of undeclared identifier 'v26'
v26 = canon_modify_mem_list[v9]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_transp/src/obj/gcse.o] Error 1
